k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-backend-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: app.student1.devops8.test-danit.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: python-backend-service
                port:
                  number: 80
